API endpoints outlined with swagger docs
